[package]
name = "new-sdk-example"
version = "0.1.0"
authors = ["Irisawa Masaru <irisawa.masaru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
chrono = "*"
uuid = { version = "0.6", features = ["v4"] }
serde = "*"
toml = "*"
serde_derive = "*"
aws-sdk-s3 = "*"
aws-config = "*"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
filetime = "*"
