[package]
name = "github-api"
version = "0.1.0"
authors = ["Irisawa Masaru <mass10.github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.0"
chrono = "*"
ctrlc = "*"
serde_json = "*"
base64 = "*"
