[package]
name = "rust-s3"
version = "0.1.0"
authors = ["Irisawa Masaru <irisawa.masaru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.0"
chrono = "*"
serde_json = "*"
base64 = "*"
hmac = "*"
# sha1 = "*"
rust-crypto = "*"
